# scoriX

./: .env  .gitignore  .google-cookie  README.md  README_FLASK_API.md  app.py  app_flask.py  cleanup_qdrant.py  formatted_question_paper.html  formatted_question_paper.md  formatted_question_paper.txt  generate_qp.py  imgEvaluator.py  main.py  pyproject.toml  question_paper_formatter.py  question_paper_output_20260108_005752.json  read_log_tail.py  requirements.txt  test.py  view_qp.py
agents/answerKeyAgent/: answerKeyAgent.py  documentProcessor.py
agents/questionPaperGeneratorAgent/: questionPaperGenerator.py  verify_scraper.py
evaluator agent/: .gitignore  README.md  config.py  evaluation_memory.py  main.py  memory_manager.py  pipeline.py  process_co_questions.py  setup_env.py
evaluator agent/agents/: __init__.py  bloom_agent.py  difficulty_agent.py  embedding_agent.py  evaluator_agent.py  pattern_agent.py  question_reasoning_agent.py  repetition_agent.py  segmentation_agent.py  topic_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FileUploader.jsx  Header.jsx  Toast.jsx  (+4 more)
outputs/: question_paper_output_20260108_144031.json  question_paper_output_20260108_150109.json  question_paper_output_20260108_150248.json
ragSystems/: embedder.py  imageRag.py  qdrantManager.py  ragProcessor.py  testSystem.py  verify_hybrid.py
services/: LLMServices.py
services/prompt/: prompt.py  prompt.py.backup  promptProcessor.py
tools/webSearcher/: demo_real_scrape.py  scrapers.py  test_scrapers.py
(+1 files in other folders)
